--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
-<!DOCTYPE html>
 <html>
+<style>
+html { 
+   width:100%; 
+   height:100%; 
+   background:url(mo2.png) center center no-repeat;
+}</style>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosting FacaACoisaCerta.</p>
 </body>
 </html>
