--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 html { 
    width:100%; 
    height:100%; 
-   background:url(mo2.png) center center no-repeat;
+   background:url(mo2.jpg) center center no-repeat;
 }</style>
 <body>
 </body>
