--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <html>
-<style>
-html { 
-   width:100%; 
-   height:100%; 
-   background:url(mo2.jpg) center center no-repeat;
-}</style>
 <body>
+
+
+<a href="#capitulo2">Clique pro capitulo 2</a><br>
+<a href="#linkcontato"><img src="stanley.png"></a><br>
+
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+<a name="capitulo2">Capitulo 2</a>
+
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+<a name="linkcontato"><img src="stanley.png"></a>
+
 </body>
 </html>
