--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@ html {
    background:url(mo5.png) center center no-repeat;
 }</style>
 <body>
+   <video width="720" height="720" autoplay>
+      <source src="tralala.webm" type="video/webm">
+      <source src="tralala.mp4" type="video/mp4">
+      <source src="tralala.ogv" type="video/ogg">
+  Your browser does not support the video element. Kindly update it to latest version.
+</video >
 </body>
 </html>
