--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@ html {
    width:100%; 
    height:100%; 
    background:url(mo5.png) center center no-repeat;
-}</style>
+}
+.content {
+  max-width: 500px;
+  margin: auto;
+}
+</style>
 <body>
-   <video width="720" height="720" autoplay>
-      <source src="tralala.webm" type="video/webm">
-      <source src="tralala.mp4" type="video/mp4">
-      <source src="tralala.ogv" type="video/ogg">
-  Your browser does not support the video element. Kindly update it to latest version.
+<div class="content">
+  <video width="720" height="720" autoplay>
+    <source src="tralala.webm" type="video/webm">
+    <source src="tralala.mp4" type="video/mp4">
+    <source src="tralala.ogv" type="video/ogg">
+Your browser does not support the video element. Kindly update it to latest version.
 </video >
+</div>   
 </body>
 </html>
