--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 html { 
    width:100%; 
    height:100%; 
-   background:url(mo5.png) center center no-repeat;
+<!--   background:url(mo5.png) center center no-repeat;-->
 }
 .content {
   max-width: 500px;
