--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ html {
 <!--   background:url(mo5.png) center center no-repeat;-->
 }
 .content {
-  max-width: 500px;
+<!--  max-width: 500px;-->
   margin: auto;
 }
 </style>
@@ -16,7 +16,7 @@ html {
     <source src="tralala.webm" type="video/webm">
     <source src="tralala.mp4" type="video/mp4">
     <source src="tralala.ogv" type="video/ogg">
-Your browser does not support the video element. Kindly update it to latest version.
+Seu browser foi hackeado por Glenn Greenwald. Atualize para ver o vídeo.
 </video >
 </div>   
 </body>
