--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-  <link href="video-js.css" rel="stylesheet" />
+  <link href="https://vjs.zencdn.net/7.11.4/video-js.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -21,5 +21,5 @@
     </p>
   </video>
 
-  <script src="video.min.js"></script>
+  <script src="https://vjs.zencdn.net/7.11.4/video.min.js"></script>
 </body>
