--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <head>
   <link href="video-js/video-js.css" rel="stylesheet" />
+  <style>
+    .content {
+      margin: auto;
+    }
+  </style>
 </head>
-
 <body>
+  <div class="content">
   <video
     id="tralala"
     class="video-js"
@@ -22,4 +27,5 @@
   </video>
 
   <script src="video-js/video.min.js"></script>
+  </div>
 </body>
