--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
   <link href="video-js/video-js.css" rel="stylesheet" />
+  <link href="video-js/themes/fantasy/index.css" rel="stylesheet" />
   <style>
     .content {
       margin: auto;
@@ -10,7 +11,7 @@
   <div class="content">
   <video
     id="tralala"
-    class="video-js"
+    class="video-js vjs-theme-fantasy"
     controls
     preload="auto"
     width="720"
