--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </style>
 </head>
 <body>
-  <div class="content">
+  <div class="content" align="center">
   <video
     id="tralala"
     class="video-js vjs-theme-fantasy"
