--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     preload="auto"
     width="720"
     height="720"
-    poster="mo5.png"
+    poster="mo6.jpg"
     data-setup="{}"
   >
     <source src="tralala.webm" type="video/webm" />
