--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
 <html>
+<head>
+
+<link rel="stylesheet" href="css/rand.bg.css">
 <style>
-html { 
-   width:100%; 
-   height:100%; 
-   background:black url(cebosao-original.jpg) center center no-repeat;
-   }
-   </style>
+h1,a {
+    font: 14px arial, sans-serif;
+    color: #5d5d5d;
+    text-decoration: none;
+} 
+</style>
+</head>
+<body class="randbg">
+<script src="js/jquery-1.10.2.min.js"></script> 
+<script src="js/rand.bg.js"></script> 
+<script>
+$(".randbg").RandBG();
+</script>
 <body>
-   <p><h1>
-      Cão safado
-   </h1></p>
-<!--<object data="http://www.youtube.com/embed/R7kRV0Roqow" width="1280" height="720"></object>-->
+   <h1>
+   humor inteligente <a href=mailto:rax@cachorroroludo.com.br>rax@cachorroroludo.com.br</a>
+   </h1>
+<!--<object data="http://www.youtube.com/embed/GKtZ-MTWiX0" width="1280" height="720"></object>-->
+</body>
 </body>
 </html>
