--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<meta http-equiv="refresh" content="time; URL=titico.com.br" />
+<head>
+  <meta http-equiv="refresh" content="0; URL=titico.com.br" />
+</head>
