--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <head>
-  <meta http-equiv="refresh" content="0; URL=http://titico.com.br" />
+  <meta http-equiv="refresh" content="0; URL=https://titico.com.br" />
 </head>
