--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
-<head>
+<!--<head>
   <meta http-equiv="refresh" content="0; URL=https://titico.com.br" />
-</head>
+</head>-->
+Livre pra por qualquer coisa aqui.
