--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
 <!--<head>
   <meta http-equiv="refresh" content="0; URL=https://titico.com.br" />
 </head>-->
-Livre pra por qualquer coisa aqui.
+<html>
+<head>
+<title>
+Titico.com.br - É o gato!
+</title>
+</head>
+<body>
+Livre pra pôr qualquer coisa aqui.
+</body>
+</html>
